<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fire_control</name>
  <version>0.0.0</version>
  <description>RoboMaster fire control.</description>
  <maintainer email="20234001019@m.scnu.edu.cn">oy</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ouyyyyang/rm_fire_control</url>
  <url type="bugtracker">https://github.com/ouyyyyang/rm_fire_control/issues</url>
  <author email="20234001019@m.scnu.edu.cn">Ouyang Zhuohan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>message_filters</depend>  
  <depend>std_srvs</depend>  
  <depend>std_msgs</depend>
  <depend>auto_aim_interfaces</depend>  
  <depend>fire_control_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>  
  <depend>sensor_msgs</depend> 
  <depend>eigen</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
