<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fire_control_interfaces</name>
  <version>0.0.0</version>
  <description>RoboMaster fire control.</description>
  <maintainer email="20234001019@m.scnu.edu.cn">oy</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ouyyyyang/rm_fire_control</url>
  <url type="bugtracker">https://github.com/ouyyyyang/rm_fire_control/issues</url>
  <author email="20234001019@m.scnu.edu.cn">Ouyang Zhuohan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>